updated to mc-26.1.2
Changes:
- Updated the build configuration for Minecraft 26.1.2.
- Updated the project to use Java 25.
- Updated the default DeepSeek model to deepseek-v4-flash.
- Updated accepted DeepSeek model names to deepseek-v4-flash and deepseek-v4-pro.
- Improved async handling so API requests run off-thread, while Minecraft server output is safely executed back on the server thread.
- Added shutdown handling for the DeepChat executor service.